cmake_minimum_required(VERSION 3.2)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
project(tensorrt-classification)
#include_directories()

#SET(SRC )
find_package(CUDA)
##add_executable(CLASSIFICATION src/main.cpp)
#cuda_add_executable(sample src/sample.cpp)
#target_link_libraries(sample nvinfer nvonnxparser)
cuda_add_executable(mobilenet src/mobilenet.cpp)
target_link_libraries(mobilenet nvinfer nvonnxparser)
